# OBJRenderer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: main.cpp
src/ArgvParser/: ArgvParser.cpp  ArgvParser.h  README.md
src/OBJParser/: OBJParser.cpp  OBJParser.h  README.md
src/OBJRenderer/: OBJRenderer.cpp  OBJRenderer.h  README.md
src/SImg/: README.md  SImg.cpp  SImg.h
